<resources>
	<string name="app_name">Veeps</string>
	<string name="app_description">veeps</string>
	<string name="app_platform">fire_tv</string>
	<string name="my_shows_label">My Shows</string>
	<string name="follow_label">Follow</string>
	<string name="browse_label">Browse</string>
	<string name="on_demand_label">On Demand</string>
	<string name="my_shows_description">You don’t have any shows saved. When you do, you’ll see them here.</string>
	<string name="browse_shows_label">Browse Shows</string>
</resources>