<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.shows.ui.ShowsScreen">

    <data>

        <import type="android.view.View" />

        <variable
            name="shows"
            type="com.veeps.app.feature.shows.viewModel.ShowsViewModel" />

        <variable
            name="showsScreen"
            type="com.veeps.app.feature.shows.ui.ShowsScreen" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_black">

        <include layout="@layout/guidelines" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/dark_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/guidelines" />

            <TextView
                android:id="@+id/title"
                fontPath="fonts/RuderPlakatRegular.ttf"
                android:layout_width="530dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:lines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/my_shows_label"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="44sp"
                app:layout_constraintBottom_toTopOf="@+id/search_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingPrefix" />

            <androidx.leanback.widget.VerticalGridView
                android:id="@+id/listing"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <LinearLayout
                android:id="@+id/no_result_container"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    fontPath="fonts/RuderPlakatRegular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:text="@string/my_shows_label"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textIsSelectable="false"
                    android:textSize="44sp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    fontPath="fonts/SaansMedium.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:lines="2"
                    android:text="@string/my_shows_description"
                    android:textAlignment="gravity"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    tools:ignore="MissingPrefix" />

                <Button
                    android:id="@+id/browse_shows"
                    fontPath="fonts/SaansMedium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_button_white"
                    android:contentDescription="@string/app_description"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:lines="1"
                    android:onClick="@{(v)-> showsScreen.onBrowseShows()}"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/browse_shows_label"
                    android:textAllCaps="false"
                    android:textColor="@color/selector_button_label_white"
                    android:textIsSelectable="false"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loader"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:indeterminateTint="@color/white"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/bottom"
            app:layout_constraintEnd_toEndOf="@+id/end"
            app:layout_constraintStart_toStartOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@id/top" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
