<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.browse.ui.BrowseNewScreen">

    <!-- Data -->
    <data>

        <import type="android.view.View" />

        <!-- View Model -->
        <variable
            name="browse"
            type="com.veeps.app.feature.browse.viewModel.BrowseViewModel" />

        <!-- Screen -->
        <variable
            name="browseScreen"
            type="com.veeps.app.feature.browse.ui.BrowseNewScreen" />

    </data>

    <!-- Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Layout Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Inner Guidelines -->
            <include layout="@layout/guidelines" />

            <!-- Video Player -->
            <androidx.media3.ui.PlayerView
                android:id="@+id/video_player"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:animation_enabled="true"
                app:artwork_display_mode="fill"
                app:auto_show="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:resize_mode="fill"
                app:show_buffering="never"
                app:use_artwork="true"
                app:use_controller="false" />

            <!-- Hero Image -->
            <ImageView
                android:id="@+id/hero_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Hero Image Gradient -->
            <ImageView
                android:id="@+id/hero_image_gradient"
                android:layout_width="match_parent"
                android:layout_height="342dp"
                android:contentDescription="@string/app_description"
                android:src="@drawable/browse_hero_gradient"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Image -->
            <ImageView
                android:id="@+id/dark_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_description"
                android:src="@color/dark_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.rubensousa.dpadrecyclerview.DpadRecyclerView
                android:id="@+id/listing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:fadingEdge="vertical"
                android:fadingEdgeLength="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Watermark Logo -->
            <ImageView
                android:id="@+id/watermark"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="30dp"
                android:contentDescription="@string/app_description"
                android:src="@drawable/watermark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Logo -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="10dp"
                android:layout_marginTop="41.5dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/app_description"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Browse Text Background Blur -->
            <eightbitlab.com.blurview.BlurView
                android:id="@+id/browse_label"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/selector_browse_button_background"
                android:elevation="2dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:onClick="@{(v)-> browseScreen.onBrowseLabelClicked()}"
                app:blurOverlayColor="@color/white_10"
                app:layout_constraintEnd_toStartOf="@+id/on_demand_label"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Browse Text -->
                <TextView
                    android:id="@+id/browse_text"
                    fontPath="fonts/SaansMedium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:letterSpacing="0.03"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="1dp"
                    android:text="@string/browse_label"
                    android:textAlignment="gravity"
                    android:textColor="@color/selector_home_label"
                    android:textIsSelectable="false"
                    android:textSize="11sp" />

            </eightbitlab.com.blurview.BlurView>

            <!-- On Demand Text Background Blur -->
            <eightbitlab.com.blurview.BlurView
                android:id="@+id/on_demand_label"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/selector_browse_button_background"
                android:elevation="2dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:onClick="@{(v)-> browseScreen.onOnDemandLabelClicked()}"
                app:blurOverlayColor="@color/white_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/browse_label"
                app:layout_constraintTop_toTopOf="parent">

                <!-- On Demand Text -->
                <TextView
                    android:id="@+id/on_demand_text"
                    fontPath="fonts/SaansMedium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:letterSpacing="0.03"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="1dp"
                    android:text="@string/on_demand_label"
                    android:textAlignment="gravity"
                    android:textColor="@color/selector_home_label"
                    android:textIsSelectable="false"
                    android:textSize="11sp" />

            </eightbitlab.com.blurview.BlurView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Loader -->
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loader"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:indeterminateTint="@color/white"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
